tests/snapshots/trace_solver@4565781073236055611.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatInner
    fallback_to_outer: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: true
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: Error
  bundle_name: rfc3627
  request: "[mut x]: &[T]"
---
let [mut x]: &[T] = s
// Applying rule `ConstructorRef`
let mut x: &T = &(*s).0
// Type error for `let mut x: &T = &(*s).0`: MutBindingOnInhRef
