tests/snapshots/trace_solver@4609908473738155108.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
  bundle_name: stateless
  request: "[x, &y]: &[T, U]"
---
[x, &y] @ s: &[T, U]
// Applying rule `ConstructorRef`
x @ &(*s).0: &T
&y @ &(*s).1: &U
// Applying rule `Binding`
let x: &T = &(*s).0
&y @ &(*s).1: &U
// Applying rule `Deref`
let x: &T = &(*s).0
y @ *&(*s).1: U
// Applying rule `Binding`
let x: &T = &(*s).0
let y: U = *&(*s).1

// Final bindings (simplified):
let x: &T = &(*s).0;
let y: U = (*s).1;
